--- a/.github/workflows/library_update_npm.yml
+++ b/.github/workflows/library_update_npm.yml
@@ -22,16 +22,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-        
-      - name: Install nodejs
-        run: 'sudo apt install nodejs'
-
-      - name: Install nodejs
-        run: 'sudo npm set registry=https://registry.npmjs.org/'
-      
-      - name: Install nodejs
-        run: 'sudo apt install nodejs'
-
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 12
+      - run: npm install
+      - run: npm test
+      - uses: JS-DevTools/npm-publish@v1
+        with:
+          token: ${{ secrets.NPM_SECRET }}
       
