--- a/.github/workflows/library_update_npm.yml
+++ b/.github/workflows/library_update_npm.yml
@@ -28,10 +28,11 @@ jobs:
           node-version: 12
 
       - name: Going to location
-        run: 'cd complemento_para_angular/projects/mock-json-bancolombia'
-
-      - run: npm install
-      - run: npm test
+        run: | 
+            cd complemento_para_angular/projects/mock-json-bancolombia
+            npm install
+            npm test
+            
       - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_SECRET }}
