--- a/.github/workflows/library_update_npm.yml
+++ b/.github/workflows/library_update_npm.yml
@@ -32,8 +32,10 @@ jobs:
             cd complemento_para_angular/projects/mock-json-bancolombia
             npm install
             npm test
-            
+
       - uses: JS-DevTools/npm-publish@v1
+        run: |
+            cd complemento_para_angular/projects/mock-json-bancolombia
         with:
           token: ${{ secrets.NPM_SECRET }}
       
